add images folder, upate index.html & styles.css

--- a/index.html
+++ b/index.html
@@ -2,17 +2,74 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Site</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>Angela</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="images/favicon.ico" />
   </head>
   <body>
-    <h1>Hi, there! I'm Chris.</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic magni alias
-      quaerat aperiam officiis, nemo sint inventore ducimus obcaecati pariatur
-      dicta, vero id odit eaque a quos sit minus nostrum.
-    </p>
+    <header>
+      <img class="cloud-1" src="images/cloud.png" alt="cloud" />
+      <p class="title">I'm Angela.</p>
+      <p class="desc">a progrmmer.</p>
+      <img class="cloud-2" src="images/cloud.png" alt="cloud" />
+      <img src="images/mountain.png" alt="mountain" />
+    </header>
+
+    <main>
+      <div class="intro">
+        <img src="images/angela.png" alt="angela" />
+        <p class="intro-heading">Hello.</p>
+        <p class="intro-desc">
+          I am an iOS and Web Developer. I'm the founder and CTO of The App
+          Brewery. I ❤️ coffee and brew my own beers.
+        </p>
+      </div>
+      <hr />
+      <div class="skills">
+        <p>My Skills</p>
+        <div>
+          <img src="" alt="" />
+          <p>Design & Development</p>
+          <p>
+            I started learning to code when I was 12 years old because I wanted
+            to make my own video games. Over time, I have gained a wealth of
+            experience designing and developing mobile and web applications.
+          </p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <p>Hot Wings Challenge</p>
+          <p>
+            But my best skill is actually in eating hot wings. I am the
+            undisputed queen of hot wing challenges. Ghost Peppers and Carolina
+            Reapers are my favourite snacks.
+          </p>
+        </div>
+      </div>
+      <hr />
+      <div class="ending">
+        <p>Get In Touch</p>
+        <p>If you love hot wings as much as I do.</p>
+        <p>
+          Love hot wings as much as I do? Let's talk about how awesome they are!
+          We can code while we eat hot wings!
+        </p>
+        <div class="contact-button">Contact me</div>
+      </div>
+    </main>
+    <footer>
+      <div>
+        <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+        <a href="https://www.twitter.com" target="_blank">Twitter</a>
+        <a href="https://xiahu721.github.io" target="_blank">Website</a>
+      </div>
+      <p>&copy;2022 Chris Woo @ The App Brewery.</p>
+    </footer>
   </body>
 </html>
