comment out the first image

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   </head>
   <body>
     <header>
-      <img class="cloud-1" src="images/cloud.png" alt="cloud" />
-      <p class="title">I'm Angela.</p>
+<!--      <img class="cloud-1" src="images/cloud.png" alt="cloud" />
+    -->
+    <p class="title">I'm Angela.</p>
       <p class="desc">a progrmmer.</p>
       <img class="cloud-2" src="images/cloud.png" alt="cloud" />
       <img src="images/mountain.png" alt="mountain" />
