duplicate the first image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <header>
       <img class="cloud-1" src="images/cloud.png" alt="cloud" />
+      <img class="cloud-1" src="images/cloud.png" alt="cloud" />
       <p class="title">I'm Angela.</p>
       <p class="desc">a progrmmer.</p>
       <img class="cloud-2" src="images/cloud.png" alt="cloud" />
