--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         <div class="contact-button">Contact me</div>
       </div>
       <iframe
-        src="https://www.youtube.com/watch?v=KOJw7pmrALs"
+        src="https://www.youtube.com/embed/tgbNymZ7vqY"
         width="420"
-        height="315"
+        height="345"
       ></iframe>
     </main>
     <footer>
