--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="contact-button">Contact me</div>
       </div>
       <iframe
-        src="https://www.youtube.com/embed/tgbNymZ7vqY"
+        src="https://www.youtube.com/watch?v=KOJw7pmrALs"
         width="420"
         height="345"
       ></iframe>
